2007-12-21  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/shoplistbox.cpp: Fixed shop list box not to scroll up when
	the selection is removed.
	* src/resources/resourcemanager.h, src/resources/resourcemanager.cpp:
	Added logging of error on PHYSFS_addToSearchPath.
	* src/localplayer.cpp, src/inventory.h, src/gui/inventorywindow.cpp,
	src/inventory.cpp, src/localplayer.h: Fixed inventory size not
	matching the size assumed by eAthena, and related memory corruption.
	* src/main.cpp: Increased default chat log length.

2007-12-19  Philipp Sehmisch  <tmw@crushnet.org>

	* data/maps/new_18-1.tmx: Fixed a map bug (monster trap) on
	map 18 (woodland village surrounding)

2007-12-19  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* tools/upalyzer/analyse.php: Fixed association of entries to update,
	added no-cache headers, added a bit of error reporting in case of
	invalid zip files, kept original ordering of the update list and
	sorted the list of entries on their filename.
	* tools/upalyzer/analyse.php: Added list of files in each update with
	indication on whether they are still used.

2007-12-18  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/main.cpp: Remember to delete the progressbar and label also when
	the game was not started.
	* tools/upalyzer/analyse.php: Added initial version of the update
	analysis tool upalyzer.
	* tools/upalyzer/analyse.php: Optimized with single loop approach and
	nicer printing calls, inspired by doener's version. Also added list of
	update entries and their respective update.

2007-12-14  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/head-mask.png,
	data/graphics/sprites/head-mask.xml,
	data/graphics/sprites/head-mushroom.xml,
	data/graphics/sprites/head-shroom.xml,
	data/items.xml, data/equipment.xml:
	Fixed some problems with the new items.

2007-12-12  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/tiles/cave.png, data/graphics/tiles/cave_x2.png:
	Fixed the blurred outlines of the new tiles.
